--- a/style.css
+++ b/style.css
@@ -1,58 +1,27 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
-html, body { 
-  
+body {
+  background-color: #1d1d1d;
   margin: 0;
-  height: 100%;
-  overflow: hidden;
-  font-family: 'Roboto' !important; 
-  color: white;
-  font-size: 9px;
+  padding: 0;
 }
 
-#magic {
-
-  position: fixed;
-  width: 100%;
-  height: 100vh;
-  display: block;
-  top: 0;
-  left: 0;
-  z-index: -9999;
-}
-
-.playground{
-
-  position: fixed;
-  width: 100%;
-  height: 100vh;
-  display: block;
-  top: 0;
-  left: 0;
+.wrapper {
   display: flex;
-  flex-wrap: nowrap;
-  flex-direction: column;
-  justify-content: flex-end;
+  height: 100vh;
+  justify-content: center;
   align-items: center;
-
 }
-.bottomPosition{
 
+h1 {
+  max-width: 75%;
+  font-size: 100px;
   text-align: center;
-  margin-bottom: 50px;
-  
-}
-.minText{
-  
-  font-size: 14px;
+  font-family: "Montserrat", sans-serif;
+  color: #540032;
 }
 
-a {
-  color: white;
-  font-size: 12px;
-  text-decoration: none;
-}
-
-.logo {
-    width: 50px;
-    height: 50px;
+.title {
+  background-image: url(https://cdn.pixabay.com/photo/2017/07/03/20/17/abstract-2468874_960_720.jpg);
+  background-attachment: fixed;
+  -webkit-text-fill-color: transparent;
+  -webkit-background-clip: text;
 }
